elastic search
descargar elastic search y utilizar el siguiente comando bin\elasticsearch.bat